Client & server side password strength validation

--- a/style/main.scss
+++ b/style/main.scss
@@ -2,3 +2,12 @@ body {
 	font-family: sans-serif;
 	text-align: center;
 }
+
+input:valid {
+	background-color: palegreen;
+  }
+  
+  input:invalid {
+	background-color: lightpink;
+  }
+  
