--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,57 @@
 body {
-	font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+	background-color: #1e1e1e;
+	color: #fff;
+}
+.container {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+.login-form {
+	background-color: #333;
+	padding: 40px;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 	text-align: center;
+}
+.login-form h2 {
+	margin-bottom: 20px;
+	text-align: center;
+}
+.login-form input[type="email"],
+.login-form input[type="text"],
+.login-form input[type="password"],
+.login-form input[type="submit"],
+.login-form A {
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 20px;
+	border: none;
+	border-radius: 4px;
+	background-color: #444;
+	color: #fff;
+	box-sizing: border-box;
+	text-decoration: none;
+	display: inline-block;
+}
+.login-form input[type="submit"] {
+	background-color: #007bff;
+	cursor: pointer;
+}
+.login-form input[type="submit"]:hover {
+	background-color: #0056b3;
+}
+.forgot-password-btn {
+	background-color: #444;
+}
+.forgot-password-btn:hover {
+	background-color: #666;
 }
 
 input:valid {
@@ -10,4 +61,4 @@ input:valid {
   input:invalid {
 	background-color: lightpink;
   }
-  
+ 
